fix misaligned role remove icon

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -536,7 +536,7 @@ div.customizationSection-IGy2fS.previewProfileThemes-ViDDkq
 }
 .role-2TIOKu .roleRemoveIcon-387wKV {
 	margin: 0;
-	left: unset;
+	left: 1px;
 	transform: translate(50%, -50%);
 }
 .role-2TIOKu .roleRemoveButton-17oXnT {
